--- a/package.json
+++ b/package.json
@@ -15,16 +15,21 @@
     "react-scripts": "2.1.8"
   },
   "dependencies": {
+    "ajv": "^6.10.2",
     "connected-react-router": "6.5.2",
+    "core-js": "^3.2.1",
+    "framer": "^1.1.2",
+    "grapesjs": "^0.15.5",
     "react": "16.9.0",
     "react-dom": "16.9.0",
-    "react-redux": "5.1.1",
-    "react-router": "4.4.0-beta.8",
-    "react-router-dom": "4.4.0-beta.8",
+    "react-redux": "^7.1.1",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
     "redux": "4.0.4",
     "redux-thunk": "2.3.0",
     "sanitize.css": "11.0.0",
-    "serve": "10.1.2"
+    "serve": "10.1.2",
+    "typescript": "^3.6.3"
   },
   "browserslist": [
     ">0.2%",
