--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "react-scripts eject",
     "precommit": "pretty-quick --staged"
   },
+  "peerDependencies": {},
   "devDependencies": {
     "prettier": "1.18.2",
     "react-scripts": "2.1.8"
