--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "peerDependencies": {},
   "devDependencies": {
     "prettier": "1.18.2",
+    "react-dev-utils": "^9.0.1",
     "react-scripts": "2.1.8"
   },
   "dependencies": {
     "ajv": "^6.10.2",
     "connected-react-router": "6.5.2",
     "core-js": "^3.2.1",
+    "detect-port": "^1.3.0",
     "framer": "^1.1.2",
     "grapesjs": "^0.15.5",
     "react": "16.9.0",
