--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
     "eject": "react-scripts eject",
     "precommit": "pretty-quick --staged"
   },
-  "peerDependencies": {},
+  "peerDependencies": {
+    "detect-port": "^1.3.0",
+    "react-dev-utils": "^9.0.3"
+  },
+  "devDependencies": {
+    "prettier": "1.18.2",
+    "react-dev-utils": "^9.0.3",
+    "react-scripts": "^3.1.1"
+  },
   "dependencies": {
     "ajv": "^6.10.2",
     "connected-react-router": "6.5.2",
     "core-js": "^3.2.1",
-    "detect-port": "^1.3.0",
     "grapesjs": "^0.15.5",
     "react": "16.9.0",
-    "react-dev-utils": "^9.0.3",
     "react-dom": "16.9.0",
     "react-redux": "^7.1.1",
     "react-router": "^5.0.1",
@@ -28,10 +34,6 @@
     "sanitize.css": "11.0.0",
     "serve": "10.1.2",
     "typescript": "^3.6.3"
-  },
-  "devDependencies": {
-    "prettier": "1.18.2",
-    "react-scripts": "^3.1.1"
   },
   "browserslist": [
     ">0.2%",
